--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.74.0"
   }
 }
