--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,15 @@ build/Release
 
 # Dependency directories
 node_modules
-bower_components
-jspm_packages
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# environmental variables
+.env
+
+# distribution files
+dist
