--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "request": "^2.74.0"
+  },
+  "devDependencies": {
+    "dotenv": "^2.0.0"
   }
 }
