--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
+    "pg-promise": "^5.3.1",
     "request": "^2.74.0"
   },
   "devDependencies": {
