--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
+    "method-override": "^2.3.6",
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "pg-promise": "^5.3.1",
