--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "6.2.1"
   },
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
